# gorilla

./: Cargo.toml  README.md
crates/lexer/: Cargo.toml
crates/lexer/benches/: bench_lexer.rs
crates/lexer/src/: keyword.rs  lib.rs  tests.rs  token.rs
crates/lexer/src/token/: symbol.rs
crates/lexer/testdata/output/: lexer__tests__code_snipet_tokenization.snap  lexer__tests__comment_tokenization.snap  lexer__tests__container_types_tokenization.snap  lexer__tests__function_tokenization.snap  lexer__tests__identifier_tokenization.snap  lexer__tests__literal_error_tokenization.snap  lexer__tests__literal_tokenization.snap
crates/lexer/testdata/snapshots/: code_snipet.gl  comment.gl  container_type.gl  function.gl  identifier.gl  literal.gl  literal_error.gl
