[package]
name = "gorilla"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
rust-version = "1.79"
edition = "2021"

[workspace.dependencies]
insta = "1.31.0"

[workspace.dependencies.criterion]
version = "0.5.1"
default-features = false
features = ["cargo_bench_support"]

[profile.release-lto]
inherits = "release"
lto = true

[profile.bench-lto]
inherits = "release"
lto = true
